--- a/examples/simple_linked_dataset.ipynb
+++ b/examples/simple_linked_dataset.ipynb
@@ -14,7 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
+   "id": "6938b51c-86b4-4191-b165-2872fac3e949",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir -p users_assessments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "b59623ed",
    "metadata": {},
    "outputs": [
@@ -22,12 +32,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting user_assessments.yaml\n"
+      "Writing users_assessments/user_assessments.yaml\n"
      ]
     }
    ],
    "source": [
-    "%%writefile user_assessments.yaml\n",
+    "%%writefile users_assessments/user_assessments.yaml\n",
     "\n",
     "- typename: randomdataset.generators.CSVGenerator\n",
     "  num_lines: 10\n",
@@ -115,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "bb32159e",
    "metadata": {},
    "outputs": [
@@ -123,20 +133,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Schema: 'user_assessments.yaml'\n",
-      "Output: '.'\n",
+      "Schema: 'users_assessments/user_assessments.yaml'\n",
+      "Output: 'users_assessments'\n",
       "Generating dataset 'users'\n",
       "Generating dataset 'assessments'\n"
      ]
     }
    ],
    "source": [
-    "randomdataset.application.generate_dataset.callback(\"user_assessments.yaml\",\".\")"
+    "randomdataset.application.generate_dataset.callback(\"users_assessments/user_assessments.yaml\",\"users_assessments\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "869ebb9a",
    "metadata": {},
    "outputs": [
@@ -145,26 +155,26 @@
      "output_type": "stream",
      "text": [
       "id,FirstName,LastName,bmi,has_diabetes,height_cm,year_of_birth\n",
-      "0,\"Quin\",\"Blargs\",20,0,189,2003\n",
-      "1,\"Peggy\",\"Unknown\",36,1,121,1952\n",
-      "2,\"Grace\",\"Bar\",23,1,135,1947\n",
-      "3,\"Zoe\",\"Unknown\",26,0,196,2003\n",
-      "4,\"Kylie\",\"Thunk\",28,1,104,1985\n",
-      "5,\"Ivan\",\"Thunk\",27,1,152,1944\n",
-      "6,\"Judy\",\"Anon\",28,1,178,1951\n",
-      "7,\"Judy\",\"Anon\",21,1,193,2005\n",
-      "8,\"Yan\",\"Blargs\",32,0,155,1947\n",
-      "9,\"Dan\",\"Nemo\",23,0,179,1961\n"
+      "0,\"Grace\",\"None\",39,1,130,1967\n",
+      "1,\"Carol\",\"Nobody\",38,0,119,1975\n",
+      "2,\"Wendy\",\"Random\",28,0,128,1926\n",
+      "3,\"Mallory\",\"Nobody\",25,0,117,1944\n",
+      "4,\"Xavier\",\"Unknown\",29,1,190,1974\n",
+      "5,\"Olivia\",\"Thunk\",26,0,107,2004\n",
+      "6,\"Xavier\",\"Anon\",30,0,175,1973\n",
+      "7,\"Xavier\",\"Null\",37,0,140,1963\n",
+      "8,\"Ivan\",\"Bloggs\",37,0,134,1999\n",
+      "9,\"Trudy\",\"Bar\",28,0,116,1929\n"
      ]
     }
    ],
    "source": [
-    "!cat users.csv"
+    "!cat users_assessments/users.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "723cdb3a-2fa9-4298-8199-282dfcf6086b",
    "metadata": {},
    "outputs": [
@@ -173,46 +183,46 @@
      "output_type": "stream",
      "text": [
       "id,date,user_id,abdominal_pain,brain_fog,loss_of_smell,tested_covid_positive,temperature_f\n",
-      "0,2022-01-31 13:10:19.470142+00:00,0,0,1,0,2,107.49023514725474\n",
-      "1,2021-11-12 04:17:56.782553+00:00,1,0,1,1,0,105.6942570124724\n",
-      "2,2022-01-01 14:31:02.775222+00:00,2,1,0,0,0,96.54598657012015\n",
-      "3,2021-06-11 19:21:16.500351+00:00,3,0,1,1,0,105.10060277211116\n",
-      "4,2022-01-24 17:25:45.546875+00:00,4,1,0,1,2,104.78580411362383\n",
-      "5,2021-05-19 19:28:55.347014+00:00,5,1,1,0,0,99.1889494912643\n",
-      "6,2021-05-11 00:53:23.349521+00:00,6,0,1,1,2,109.46725811260491\n",
-      "7,2021-07-10 11:37:36.951190+00:00,7,0,1,0,0,95.14845661460399\n",
-      "8,2021-11-12 16:39:51.889504+00:00,8,1,0,0,0,97.73890279974026\n",
-      "9,2022-02-11 04:39:26.788180+00:00,9,1,1,1,0,98.02984864593004\n",
-      "10,2021-06-06 21:30:19.920080+00:00,0,1,1,0,1,104.13524032621973\n",
-      "11,2022-02-08 03:18:02.527770+00:00,1,1,1,1,1,105.399991356878\n",
-      "12,2021-02-20 14:45:30.235950+00:00,2,1,1,1,2,105.81507610779525\n",
-      "13,2021-03-25 15:01:35.580187+00:00,3,0,0,0,2,103.39740560144419\n",
-      "14,2021-06-25 12:42:53.454412+00:00,4,1,1,0,0,96.42637849054682\n",
-      "15,2021-04-22 12:51:03.968833+00:00,5,0,0,0,0,105.55405159339217\n",
-      "16,2022-01-17 06:01:40.192258+00:00,6,1,0,0,1,99.86833477733987\n",
-      "17,2021-11-02 17:39:19.250052+00:00,7,0,0,1,0,95.18785494148366\n",
-      "18,2021-05-13 00:49:28.529711+00:00,8,1,0,0,0,109.91900084649247\n",
-      "19,2021-05-25 07:32:23.442792+00:00,9,0,1,0,2,96.64168142544378\n",
-      "20,2021-10-27 17:07:20.268680+00:00,0,1,0,0,0,109.68642285851755\n",
-      "21,2021-09-29 00:53:43.371019+00:00,1,1,1,0,0,102.94022684794106\n",
-      "22,2021-05-18 08:01:57.282126+00:00,2,0,0,0,1,100.35970556649822\n",
-      "23,2021-04-13 09:12:11.682754+00:00,3,0,1,1,1,104.13998240599659\n",
-      "24,2022-01-08 18:03:39.408368+00:00,4,1,1,1,2,100.98163078840906\n",
-      "25,2021-10-12 00:02:50.612215+00:00,5,1,0,0,2,100.93178587364822\n",
-      "26,2021-05-03 10:47:21.937449+00:00,6,0,1,0,0,109.75762878101882\n",
-      "27,2021-10-31 03:55:50.569103+00:00,7,0,0,0,0,105.49404619459615\n",
-      "28,2021-07-16 22:25:12.780141+00:00,8,1,1,0,0,100.03338355808135\n",
-      "29,2021-08-04 17:27:07.316704+00:00,9,1,0,1,1,108.0929488715657\n"
+      "0,2021-10-24 11:45:43.677374+00:00,0,0,1,1,2,103.22149054047082\n",
+      "1,2021-12-16 13:09:58.380573+00:00,1,0,1,0,0,100.62518751030662\n",
+      "2,2021-08-05 17:51:30.943546+00:00,2,0,0,1,0,105.18487884609749\n",
+      "3,2021-04-09 14:47:54.599226+00:00,3,1,0,1,0,96.4302053852154\n",
+      "4,2021-09-29 00:15:42.142405+00:00,4,1,1,1,0,109.63616106818489\n",
+      "5,2021-04-24 09:53:44.215726+00:00,5,1,0,0,1,107.69840121429907\n",
+      "6,2021-11-13 07:35:32.840341+00:00,6,0,0,0,1,97.00309019318361\n",
+      "7,2022-02-14 00:08:04.885913+00:00,7,1,0,0,1,95.22598358524823\n",
+      "8,2022-02-07 15:36:57.841132+00:00,8,0,0,0,2,95.48740949212532\n",
+      "9,2021-02-21 01:48:38.675272+00:00,9,0,1,1,0,106.27664175133276\n",
+      "10,2021-08-05 00:06:12.343504+00:00,0,0,1,1,0,103.07544677653925\n",
+      "11,2021-11-07 21:52:41.868990+00:00,1,1,0,0,2,102.81942527899108\n",
+      "12,2021-05-20 14:49:01.700189+00:00,2,0,0,0,2,103.25591242165508\n",
+      "13,2021-09-28 03:13:05.410689+00:00,3,0,1,1,1,98.99925665317788\n",
+      "14,2022-01-21 13:39:41.914258+00:00,4,1,1,1,0,104.73914713718412\n",
+      "15,2021-04-06 10:40:50.447460+00:00,5,0,0,1,1,95.47080459402937\n",
+      "16,2021-12-20 01:53:04.166355+00:00,6,0,1,0,0,97.79758064358536\n",
+      "17,2021-10-11 18:45:24.349922+00:00,7,0,1,0,0,95.87860080008119\n",
+      "18,2021-04-04 13:14:36.124810+00:00,8,0,1,1,1,108.78273531994027\n",
+      "19,2022-02-14 06:51:09.464885+00:00,9,0,0,0,2,100.28032607623044\n",
+      "20,2021-05-17 14:09:07.047752+00:00,0,0,0,1,1,100.79853200088986\n",
+      "21,2021-06-11 01:13:23.001260+00:00,1,0,1,1,1,104.63677316034355\n",
+      "22,2021-04-06 04:16:39.361154+00:00,2,1,1,0,1,107.68363442020022\n",
+      "23,2021-06-27 01:21:21.633768+00:00,3,1,0,1,1,97.08478382878046\n",
+      "24,2021-11-02 17:52:04.146347+00:00,4,1,1,1,2,103.44636506288838\n",
+      "25,2021-06-12 11:58:35.491048+00:00,5,1,0,0,1,95.8026824345136\n",
+      "26,2021-03-09 13:52:33.458577+00:00,6,0,1,1,0,100.76416498492172\n",
+      "27,2021-04-27 12:37:30.891582+00:00,7,1,1,0,0,103.99752973377511\n",
+      "28,2022-01-10 02:08:42.584960+00:00,8,0,0,0,2,102.30838309482037\n",
+      "29,2021-03-18 03:06:36.735481+00:00,9,1,1,1,0,96.4187993279403\n"
      ]
     }
    ],
    "source": [
-    "!cat assessments.csv"
+    "!cat users_assessments/assessments.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "4658fd72-a2a4-4e8a-ae7a-1875c5952fb9",
    "metadata": {},
    "outputs": [
@@ -220,12 +230,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting user_assessments.json\n"
+      "Writing users_assessments/user_assessments.json\n"
      ]
     }
    ],
    "source": [
-    "%%writefile user_assessments.json\n",
+    "%%writefile users_assessments/user_assessments.json\n",
     "\n",
     "{\n",
     "  \"exetera\": {\n",
@@ -351,19 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0d1dc28b-78a1-493f-892f-339ba0c268f8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys, os\n",
-    "sys.path.append(os.path.abspath(\"../../exetera/ExeTera\"))\n",
-    "import exetera"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "88366fba-e472-4d9a-9f9b-c91891742583",
    "metadata": {},
    "outputs": [
@@ -371,12 +369,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "read_file_using_fast_csv_reader: 1 chunks, 10 accumulated_written_rows parsed in 0.8907837867736816s\n",
-      "completed in 0.8990933895111084 seconds\n",
-      "Total time 0.8994894027709961s\n",
-      "read_file_using_fast_csv_reader: 1 chunks, 30 accumulated_written_rows parsed in 0.12972235679626465s\n",
-      "completed in 0.13634133338928223 seconds\n",
-      "Total time 0.1364729404449463s\n"
+      "read_file_using_fast_csv_reader: 1 chunks, 10 accumulated_written_rows parsed in 0.010171890258789062s\n",
+      "completed in 0.018576860427856445 seconds\n",
+      "Total time 0.01882028579711914s\n",
+      "read_file_using_fast_csv_reader: 1 chunks, 30 accumulated_written_rows parsed in 0.006245851516723633s\n",
+      "completed in 0.01291799545288086 seconds\n",
+      "Total time 0.013108015060424805s\n"
      ]
     }
    ],
@@ -387,37 +385,22 @@
     "from exetera.core import session\n",
     "from datetime import datetime, timezone\n",
     "\n",
+    "# exetera import -w -s user_assessments.json -i \"users:users.csv, assessments:assessments.csv\" -o user_assessments.hdf5\n",
     "with session.Session() as s:\n",
     "    importer.import_with_schema(\n",
     "        session=s,\n",
     "        timestamp=str(datetime.now(timezone.utc)),\n",
     "        dataset_alias=\"UserAssessments\",\n",
     "        dataset_filename=\"user_assessments.hdf5\",\n",
-    "        schema_file=\"user_assessments.json\",\n",
-    "        files={\"users\": \"users.csv\", \"assessments\":\"assessments.csv\"},\n",
+    "        schema_file=\"users_assessments/user_assessments.json\",\n",
+    "        files={\"users\": \"users_assessments/users.csv\", \"assessments\":\"users_assessments/assessments.csv\"},\n",
     "        overwrite=True,\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d093380b-8394-4795-95f4-41935dd76422",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "rm -f user_assessments.hdf5\n",
-    "exetera import -w -s user_assessments.json -i \"users:users.csv, assessments:assessments.csv\" -o user_assessments.hdf5\n",
-    "ls -lh"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:exetera_py38]",
-   "language": "python",
    "name": "conda-env-exetera_py38-py"
   },
   "language_info": {
